Fixed navigation buttons on small displays

--- a/public/common.css
+++ b/public/common.css
@@ -139,9 +139,12 @@ BODY {
 	padding: 10px 15px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 	BODY {
 		padding-top: 5px;
+	}
+	HEADER {
+		padding: 0 20px;
 	}
 	H1 {
 		font-size: 24px;
@@ -151,11 +154,6 @@ BODY {
 	}
 }
 
-@media screen and (max-width: 800px) {
-	.prev-day, .next-day {
-		display: none;
-	}
-}
 @media screen and (max-width: 1275px) {
 	.prev-day, .next-day {
 		font-size: 30px;
